# xdeid3d

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: anonymizers.rst  config.rst  evaluation.rst  metrics.rst  synthesis.rst  visualization.rst
docs/user_guide/: cli.rst  concepts.rst  evaluation.rst  visualization.rst
examples/: 01_basic_evaluation.py  02_batch_evaluation.py  03_generate_heatmap.py  04_custom_metric.py  05_custom_anonymizer.py  06_mesh_visualization.py  README.md
src/xdeid3d/: __init__.py  __main__.py
src/xdeid3d/anonymizers/: registry.py
src/xdeid3d/anonymizers/adapters/: blackout.py  identity.py  pixelate.py
src/xdeid3d/cli/: __init__.py  app.py
src/xdeid3d/core/: __init__.py
src/xdeid3d/core/geometry/: __init__.py  spherical.py
src/xdeid3d/core/regression/: kernels.py
src/xdeid3d/evaluation/: __init__.py  data.py  providers.py
src/xdeid3d/gui/: QUICKSTART.md  README.md  launch_gui.sh
src/xdeid3d/metrics/: base.py  registry.py
src/xdeid3d/spherehead/: LICENSE_NOTICE.md  camera_utils.py  legacy.py
src/xdeid3d/utils/: io.py
src/xdeid3d/viewer/: .gitignore  __init__.py  launch_viewer.sh  requirements.txt  test_metrics.py
src/xdeid3d/visualization/: colormaps.py  heatmaps.py
xdeid3d/: __init__.py
xdeid3d/anonymizers/: __init__.py  base.py
xdeid3d/anonymizers/adapters/: __init__.py  blur.py
xdeid3d/cli/: app.py  utils.py
xdeid3d/cli/commands/: __init__.py  benchmark.py  evaluate.py  generate.py  utils.py
xdeid3d/config/: __init__.py  schema.py
xdeid3d/core/regression/: __init__.py  bandwidth.py  nadaraya_watson.py
xdeid3d/evaluation/: __init__.py  pipeline.py
xdeid3d/evaluation/modes/: spherical.py
xdeid3d/gui/: __init__.py  app.py  restart.sh  stop.sh
xdeid3d/gui/backend/: .env.example  main.py  requirements.txt
xdeid3d/gui/frontend/: .env.example  index.html  package.json
xdeid3d/gui/frontend/src/: App.tsx  (+1 more)
xdeid3d/metrics/: __init__.py
xdeid3d/metrics/explainability/: saliency.py
xdeid3d/metrics/identity/: __init__.py  arcface.py  embeddings.py
xdeid3d/metrics/quality/: __init__.py  lpips.py
xdeid3d/metrics/temporal/: consistency.py
xdeid3d/spherehead/: __init__.py  projector.py  shape_utils.py
xdeid3d/spherehead/evaluation/: batch_runner.py  gpu_utils.py  mesh.py
xdeid3d/spherehead/scripts/: gen_videos.py  gen_videos_proj.py  gen_videos_proj_withseg.py
xdeid3d/spherehead/torch_utils/: custom_ops.py  persistence.py  training_stats.py
xdeid3d/spherehead/training/: networks_stylegan3.py  superresolution.py  triplane.py
xdeid3d/synthesis/: __init__.py  camera.py  mesh_extraction.py  projector.py  rendering.py
xdeid3d/utils/: __init__.py  gpu.py
xdeid3d/viewer/: README.md  __init__.py  app.py  experiment_reader.py  test_viewer.py
xdeid3d/viewer/backend/: app.py
xdeid3d/viewer/frontend/: index.html
xdeid3d/visualization/: __init__.py  figures.py  mesh.py
(+85 files in other folders)
